20110202 configure.in: update glib and GTK+ required versions to new minimums
         (more from patch #3160211) (Sergio Baldovi).
20110203 (all peripheral files): move to new peripherals/ subdirectory.
20110203 ui/{sdl/sdldisplay.c,widget/{debugger.c,menu.c,widget.c}},
         z80/coretest.c: fix up SDL for new peripherals structure.
20110204 peripherals/disk/disk.c: fix transposed arguments in memset calls
         (Sergio Baldovi).
20110204 peripherals/specdrum.h: tweak whitespace (Fred).
20110204 peripherals: add .deps and Makefile to the ignore property (Fred).
20110206 memory.[ch],peripherals/ide/{divide.c,zxatasp.c,zxcf.c}: use memory
         pool to allocate the DivIDE/ZXATASP/ZXCF memory.
20110207 peripherals/disk/disk.c: fix more transposed arguments in memset calls
         (thanks, Stuart Brady) (Fred).
20110207 peripherals/nic/enc28j60.c: add missing #include <string.h> (Fred).
20110207 machines/machines_periph.c: enable SpecDrum for TC2048 as is has
         a Spectrum compatible edge connector and ROM (Fred).
20110207 machines/machines_periph.c,periph.[ch],peripherals/{ay.c,disk/{beta.c,
         plusd.c},fuller.c,ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},if1.c,
         joystick.c,kempmouse.[ch],melodik.c,printer.c,scld.c,speccyboot.c,
         specdrum.c,ula.c},periph.h: periph_t does not represent a peripheral,
         but just one port from a peripheral, so rename appropriately.
20110208 machines/spec16.c,memory.h,peripherals/disk/plusd.c: use memory pool to
         allocate the Spectrum 16K uninstalled memory and +D memory (Fred).
20110208 machines/machines_periph.c,periph.[ch],peripherals/{ay.c,disk/{beta.c,
         opus.c,plusd.c},fuller.c,ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},
         if1.c,if2.c,joystick.c,kempmouse.c,melodik.c,printer.c,scld.c,
         speccyboot.c,specdrum.c,ula.c}: wrap peripheral data up into a type
         and further renames to better match what types represent.